--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Newco">
         <activity
-            android:name=".MainActivity"
+            android:name=".application.view.NewcoActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Newco.NoActionBar">
