--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         core_ktx_version = '1.6.0'
         gradle_version = '7.1.0-alpha02'
         hilt_version = '2.37'
+        hilt_navigation_version = '1.0.0-alpha03'
         kotlin_version = '1.5.10'
         lifecycle_version = '2.3.1'
         material_version = '1.4.0'
