--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         app_compat_version = '1.3.0'
         compose_version = '1.0.0-rc01'
         core_ktx_version = '1.6.0'
-        gradle_version = '7.1.0-alpha02'
+        gradle_version = '7.1.0-alpha03'
         hilt_version = '2.37'
         hilt_navigation_version = '1.0.0-alpha03'
         kotlin_version = '1.5.10'
@@ -14,6 +14,7 @@ buildscript {
 
         espresso_version = '3.4.0'
         junit_ext_version = '1.1.3'
+        mockk_version = '1.12.0'
     }
 
     repositories {
