--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ buildscript {
         lifecycle_version = '2.3.1'
         material_version = '1.4.0'
 
+        assertj_version = '3.19.0'
+        coroutines_version = '1.5.0'
+        faker_version = '1.0.2'
+        junit_jupiter_version = '5.7.2'
+
         espresso_version = '3.4.0'
         junit_ext_version = '1.1.3'
         mockk_version = '1.12.0'
